[gd_scene load_steps=7 format=3 uid="uid://rujmkyt8lgkq"]

[ext_resource type="Script" uid="uid://r4a2bjxqt503" path="res://scripts/pipe_pair.gd" id="1_m2bs7"]
[ext_resource type="Texture2D" uid="uid://drx10uoxjpba5" path="res://assets/pipe-green.png" id="1_t8jum"]
[ext_resource type="PackedScene" uid="uid://bxyyy3cqbpk2a" path="res://scenes/dead_zone.tscn" id="2_e3hex"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8jum"]
size = Vector2(48, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2bs7"]
size = Vector2(48, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3hex"]
size = Vector2(5.875, 120.125)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_m2bs7")

[node name="TopPipe" parent="." instance=ExtResource("2_e3hex")]
position = Vector2(0, -300)

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
rotation = 3.14159
texture = ExtResource("1_t8jum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource("RectangleShape2D_t8jum")

[node name="BottomPipe" parent="." instance=ExtResource("2_e3hex")]
position = Vector2(0, 300)

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
texture = ExtResource("1_t8jum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource("RectangleShape2D_m2bs7")

[node name="PointArea" type="Area2D" parent="."]
position = Vector2(26, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointArea"]
shape = SubResource("RectangleShape2D_e3hex")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.26498e-06, 5.72205e-06)
scale = Vector2(2.4, 6)

[connection signal="body_entered" from="PointArea" to="." method="_on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
